Demo.g4
grammar Demo;

program: (statement';')+;

statement: println
         | varDeclaration
         | assignment
           ;

expression: left=expression '/' right=expression #Div
        | left=expression '*' right=expression #Mult
        | left=expression '-' right=expression #Minus
        | left=expression '+' right=expression #Plus
        | number=NUMBER #Number
        | varName=IDENTIFIER #Variable
        ;

varDeclaration: 'int' IDENTIFIER ;

assignment: varName=IDENTIFIER '=' expr=expression;

println: 'println(' argument=expression ')' ;

IDENTIFIER: [a-zA-Z][a-zA-Z0-9]* ;
NUMBER: [0-9]+;
WHITESPACE: [ \t\n\r]+ -> skip;
